Updates & Fixing Alignments

--- a/css/styles.css
+++ b/css/styles.css
@@ -510,6 +510,14 @@ table {
     margin: 0 auto;
 }
 
+.row-footer {
+    display: flex;
+    flex-flow: row wrap;
+    width: min(92%, 98%);
+    margin: 0 auto;
+    max-width: 1750px;
+}
+
 .row .row {
     width: auto;
     margin-left: calc(var(--gutter) * -1);
@@ -1516,6 +1524,7 @@ hr.fancy::before {
     font-family: var(--font-1);
     font-size: var(--text-md);
     line-height: var(--vspace-1_25);
+    text-align: justify;
 }
 
 @media screen and (max-width: 800px) {
@@ -3349,7 +3358,7 @@ td:last-child {
  * responsive:
  * site-header
  * ------------------------------------------------------------------- */
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1100px) {
     .s-header {
         --logo-width: 10rem;
         top: var(--vspace-0_25);
@@ -3450,7 +3459,7 @@ td:last-child {
     }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 900px) {
     .s-header__logo {
         left: calc(var(--gutter) * 2 + 1vw);
     }
@@ -3972,15 +3981,19 @@ td:last-child {
     fill: var(--color-3);
 }
 
-/* Skill section with seek bar */
+.skills-division {
+    display: flex;
+    justify-content: center;
+    background: var(--color-3);
+}
+
+.skills-section h2 {
+    margin: 10px;
+}
 .skills-section {
-    width: 80%;
-    max-width: 600px;
-    margin: 50px auto;
-    padding: 20px;
-    background: #fff;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    padding: 60px;
+    max-width: 1850px;
 }
 
 .skills-section h2 {
@@ -3990,41 +4003,42 @@ td:last-child {
 }
 
 .skill {
+    display: flex;
+    flex-direction: column;
     margin-bottom: 20px;
 }
 
 .skill-title {
     font-size: 16px;
     margin-bottom: 5px;
+    padding: 0!important;
     color: #555;
+    font-size: 2rem;
+}
+
+.skill-box {
+    display: flex;
+    align-items: center;
+    gap: 20px;
 }
 
 .progress-bar {
     width: 100%;
-    height: 20px;
-    background: #e0e0e0;
-    border-radius: 10px;
+    height: 10px;
+    background: white;
     overflow: hidden;
     position: relative;
 }
 
 .progress-bar .fill {
     height: 100%;
-    background: linear-gradient(90deg, #4caf50, #81c784);
-    border-radius: 10px;
+    background: var( --color-1);
     transition: width 0.5s ease;
 }
 
-.progress-bar .percentage {
-    position: absolute;
-    right: 10px;
-    top: 0;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    font-size: 14px;
-    font-weight: bold;
-    color: #fff;
+.percentage {
+    font-size: 2rem;
+    color: #555;
 }
 /* ------------------------------------------------------------------- 
  * responsive:
@@ -4044,12 +4058,12 @@ td:last-child {
 
 /* certificates */
 .certifications {
-    padding: 60px 15px;
+    padding: 60px 40px 100px 40px;
     background-color: #212722; /* White background for the section */
 }
 
 .certifications .container {
-    max-width: 1200px;
+    max-width: 1720px;
     margin: 0 auto;
 }
 
@@ -4063,6 +4077,7 @@ td:last-child {
 .certifications-list {
     display: flex;
     flex-wrap: wrap;
+    margin-top: 60px;
     justify-content: space-between;
     gap: 20px; /* Space between items */
 }
@@ -4070,9 +4085,8 @@ td:last-child {
 .certification-item {
     flex: 1 1 calc(33.333% - 20px);
     background-color: #fff; /* White background for each item */
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 40px;
+    text-align: center;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
